<resources>
    <string name="app_name">FizzBuzz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="le_premier_chiffre">Le premier chiffre</string>
    <string name="le_second_chiffre">Le second chiffre</string>
    <string name="le_premier_mot">Le premier mot</string>
    <string name="le_second_mot">Le second mot</string>
    <string name="la_limite">La limite</string>
    <string name="fizz_buzz">Fizz Buzz</string>
    <string name="valider">Valider</string>
    <string name="statistique">Statistique</string>
    <string name="error_message_fields_should_not_be_empty">Tous les champs doivent être remplis</string>
    <string name="error_limit_zero">La limite doit être strictement supérieur à 0</string>
    <string name="error_string_equals">Les 2 mots doivent être différents</string>
    <string name="error_int_equals">Les 2 chiffres doivent être différents</string>
    <string name="error_int_zero">Les chiffres doivent être strictement supérieur à 0</string>
    <string name="statistic_empty">Aucune statistique n\'est disponible pour l\'instant.\nCommencer par lancer quelques formulaires!</string>
    <string name="statistic_top">TOP %1$d</string>
    <string name="statistic_total_hits">TOP total hits : %1$d</string>
</resources>